[gd_scene load_steps=11 format=3 uid="uid://d1lb4w20pjyap"]

[ext_resource type="Script" path="res://ui/menu.gd" id="1_bo1qd"]
[ext_resource type="FontFile" uid="uid://1mt6tq6qrv1k" path="res://assets/Kenney Thick.ttf" id="1_xqa6q"]
[ext_resource type="PackedScene" uid="uid://drpasabq4wjcq" path="res://ui/shop.tscn" id="3_3njon"]

[sub_resource type="Theme" id="Theme_3ffjh"]
default_font = ExtResource("1_xqa6q")
default_font_size = 30

[sub_resource type="Theme" id="Theme_u8r6l"]
default_font = ExtResource("1_xqa6q")
default_font_size = 30

[sub_resource type="Theme" id="Theme_twqdy"]
default_font = ExtResource("1_xqa6q")
default_font_size = 30

[sub_resource type="Animation" id="Animation_6vqvs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_h62ek"]
resource_name = "invisible"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mkux8"]
resource_name = "visible"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hocdc"]
_data = {
"RESET": SubResource("Animation_6vqvs"),
"invisible": SubResource("Animation_h62ek"),
"visible": SubResource("Animation_mkux8")
}

[node name="Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_bo1qd")

[node name="Quit" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.0520833
anchor_right = 0.0520833
offset_left = 452.0
offset_top = 363.0
offset_right = 580.0
offset_bottom = 405.0
theme = SubResource("Theme_3ffjh")
text = "Quit"
metadata/_edit_use_anchors_ = true

[node name="Shop" type="Button" parent="."]
offset_left = 512.0
offset_top = 303.0
offset_right = 644.0
offset_bottom = 345.0
theme = SubResource("Theme_u8r6l")
text = "Shop"
metadata/_edit_use_anchors_ = true

[node name="Resume" type="Button" parent="."]
offset_left = 482.0
offset_top = 243.0
offset_right = 674.0
offset_bottom = 285.0
theme = SubResource("Theme_twqdy")
text = "Resume"
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hocdc")
}
autoplay = "invisible"

[node name="Shop2" parent="." instance=ExtResource("3_3njon")]

[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
